--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=kidsfly
+spring.datasource.url=jdbc:postgresql://localhost:5432/kidsfly_dev
+spring.datasource.username=postgres
+spring.datasource.password=sai123
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+server.port=8081
